--- a/public/css/home.css
+++ b/public/css/home.css
@@ -264,6 +264,7 @@
     height: 100%;
   }
 
+  /* SERVICE */
   .home_page .service_frame {
     position: relative;
     margin-top: 30px;
@@ -278,7 +279,7 @@
     flex-direction: row;
   }
 
-  .container .service_box_one,.service_box_two,.service_box_three,.service_box_four {
+  .service_frame .container .service_box_one,.service_box_two,.service_box_three,.service_box_four {
     width: 330px;
     height: auto;
 
@@ -286,7 +287,7 @@
     color: #fff;
   }
 
-.service_box_one .service_box_two .service_box_three .service_box_four .box_left {
+  .service_frame .service_box_one .service_box_two .service_box_three .service_box_four .box_left {
   width: 30px;
   height: 72px;
 
@@ -294,18 +295,18 @@
   flex-direction: row;
   }
 
-.service_frame .box_icon{
+  .service_frame .service_frame .box_icon{
   width: 30px;
   height: 72px;
   }
 
-.service_frame img {
+  .service_frame .service_frame img {
   margin-top: 0px;
   width: 33px;
   height: 35px;
 }
 
-.service_box_one .service_box_two .service_box_three .service_box_four .box_right {
+.service_frame .service_box_one .service_box_two .service_box_three .service_box_four .box_right {
   width: auto;
   height: auto;
 
