--- a/public/css/home.css
+++ b/public/css/home.css
@@ -341,4 +341,70 @@
   color: #626974;
 } 
 
+.shopping_category {
+    position: relative;
+    margin-top: 90px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.shopping_category .container {
+    flex-direction: row;
+    width: 1320px;
+    height: 320px;
+}
+
+.container .category_title_box {
+    width: 100%;
+    height: 40px;
+
+    display: flex;
+    background: #fff;
+}
+
+.category_title_box span {
+    width: 50%;
+    height: 40px;
+
+    display: flex;
+    justify-content: flex-start;
+
+    font-family: "Jost";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+    color: #041E42;
+}
+
+.category_title_box > a {
+    width: 50%;
+    height: 40px;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    font-family: "Jost";
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 22px;
+
+    border-bottom: 1px solid #041E42;
+    color: #041E42;
+}
+
+a .hover_border {
+  background: #041E42;
+}
+
+
+
+
 
