feat: comleted category section view

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -341,70 +341,94 @@
   color: #626974;
 } 
 
-.shopping_category {
-    position: relative;
-    margin-top: 90px;
-    width: 100%;
-    height: auto;
+/* SHOP CATEGORY */
+.shop_category_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.shopping_category .container {
-    flex-direction: row;
-    width: 1320px;
-    height: 320px;
+.shop_category_frame .container {
+  flex-direction: column;
 }
 
-.container .category_title_box {
-    width: 100%;
-    height: 40px;
+.shop_category_frame .container .category_top {
+  width: 100%;
+  height: auto;
 
-    display: flex;
-    background: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.category_title_box span {
-    width: 50%;
-    height: 40px;
+.shop_category_frame .category_top span {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
 
-    display: flex;
-    justify-content: flex-start;
-
-    font-family: "Jost";
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-
-    color: #041E42;
+  color:  #041E42;
 }
 
-.category_title_box > a {
-    width: 50%;
-    height: 40px;
-
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-    font-family: "Jost";
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-
-    border-bottom: 1px solid #041E42;
-    color: #041E42;
+.shop_category_frame .category_top a {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px; 
+  color: #041E42;
 }
 
-a .hover_border {
-  background: #041E42;
+.shop_category_frame .category_top a:hover {
+  border-bottom: 2px solid #041E42 ;
 }
 
+.shop_category_frame .container .category_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+.shop_category_frame .category_wrapper .category_box {
+  width: 142px;
+  height: auto;
 
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
 
+.shop_category_frame .category_box .category_img_box {
+  width: 100%;
+  height: 150px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 150px;
+  border: 1px solid #EAEAEA;
+  background: #FFF;
+}
+
+.shop_category_frame .category_box span {
+  margin-top: 15px;
+font-family: "Jost";
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 28px; 
+
+text-align: center;
+color:  #041E42;
+}
