fix:  refactor top selling product view

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -39,6 +39,57 @@
   border-bottom: 2px solid #041E42;
 }
 
+/* PAGINATION */
+.container .pagination_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .pagination_box .pagination_main {
+  width: auto;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.pagination_main img {
+  cursor: pointer;
+}
+
+.container .pagination_main .pagination_dot {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.container .pagination_dot .dot {
+  width: 20px;
+  height: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.container .pagination_dot .dot.active {
+  border: 2px solid #112137;
+}
+
+.container .pagination_dot .dot div {
+  width: 4px;
+  height: 4px;
+  background: #112137;
+  border-radius: 50%;
+}
+
 .header_frame {
   position: relative;
   margin-top: 47px;
@@ -470,6 +521,7 @@
 .selling_product_frame .next_prev_box img {
   position: absolute;
   top: 50%;
+  cursor: pointer;
 }
 
 .selling_product_frame .product_wrapper .product_boxes {
@@ -613,6 +665,7 @@
   color: #626974;
 }
 
+ /* product_pagination_box style 1 */
 /* .container .product_pagination_box {
   position: relative;
 
@@ -655,7 +708,8 @@
   background: #F5C34B;
 } */
 
-.selling_product_frame .container .pagination {
+/* product_pagination_box style 2 bootstrap */
+/* .selling_product_frame .container .pagination {
   position: relative;
   margin-top: 30px;
   width: 100%;
@@ -664,7 +718,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
+
+/* product_pagination_box style 3 */
+
 
 .page_space_page {
   position: relative;
