--- a/public/css/home.css
+++ b/public/css/home.css
@@ -967,6 +967,7 @@ color: #041E42;
   justify-content: center;
 
   background-image: url(../images/icons/event_bg.png);
+  background-size: cover;
 }
 
 .event_frame .container {
