--- a/public/css/home.css
+++ b/public/css/home.css
@@ -23,7 +23,7 @@
 }
 
 .container .category_top span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -35,7 +35,7 @@
 
 .container .category_top a {
   margin-left: 30px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -157,7 +157,7 @@
   background: #0053F6;
   box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.10);
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -178,7 +178,7 @@
 }
 
 .container .product_content_box .product_title {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
@@ -190,7 +190,7 @@
 .container .product_content_box .product_desc {
   margin-top: 7px;
   height: 56px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -213,7 +213,7 @@
 
 .container .review_box span {
   margin-left: 10px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -230,7 +230,7 @@
 }
 
 .container .price_box strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -241,7 +241,7 @@
 
 .container .price_box span {
   margin-left: 10px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -294,7 +294,7 @@
     border-radius: 6px;
     background: #F5C34B;
 
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
@@ -306,7 +306,7 @@
     margin-top: 10px;
     width: 428px;
 
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 60px;
     font-style: normal;
     font-weight: 400;
@@ -318,7 +318,7 @@
   .header_frame .header_content p {
     margin-top: 10px;
 
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 18px;
     font-style: normal;
     font-weight: normal;
@@ -341,7 +341,7 @@
     border-radius: 6px;
     background: #FFF;
 
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
@@ -393,7 +393,7 @@
   }
 
   .header_frame .box_left span {
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
@@ -405,7 +405,7 @@
   .header_frame .box_left p {
     margin: 10px 0;
 
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 26px;
     font-style: normal;
     font-weight: 500;
@@ -415,7 +415,7 @@
   }
 
   .header_frame .box_left a {
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
@@ -458,7 +458,7 @@
   }
 
   .header_frame .box_left span {
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
@@ -470,7 +470,7 @@
   .header_frame .box_left p {
     margin: 10px 0;
 
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 26px;
     font-style: normal;
     font-weight: 500;
@@ -480,7 +480,7 @@
   }
 
   .header_frame .box_left a {
-    font-family: "Jost";
+    font-family: var(--font);
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
@@ -513,15 +513,15 @@
     flex-direction: row;
   }
 
-  .service_frame .container .service_box_one,.service_box_two,.service_box_three,.service_box_four {
-    width: 330px;
-    height: auto;
+.service_frame .container .service_box_one,.service_box_two,.service_box_three,.service_box_four {
+  width: 330px;
+  height: auto;
 
-    display: flex;
-    color: #fff;
-  }
+  display: flex;
+  color: #fff;
+}
 
-  .service_frame .service_box_one .service_box_two .service_box_three .service_box_four .box_left {
+.service_frame .service_box_one .service_box_two .service_box_three .service_box_four .box_left {
   width: 30px;
   height: 72px;
 
@@ -529,12 +529,12 @@
   flex-direction: row;
   }
 
-  .service_frame .service_frame .box_icon{
+.service_frame .service_frame .box_icon{
   width: 30px;
   height: 72px;
-  }
+}
 
-  .service_frame .service_frame img {
+.service_frame .service_frame img {
   margin-top: 0px;
   width: 33px;
   height: 35px;
@@ -552,7 +552,7 @@
   margin-left: 15px;
   width: auto;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -566,7 +566,7 @@
   width: 215px;
   height: 44px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
@@ -624,7 +624,7 @@
 
 .shop_category_frame .category_box span {
   margin-top: 15px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -738,7 +738,7 @@
   justify-content: center;
 
   background: #E5EEFF;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -796,7 +796,7 @@
 }
 
 .spec_product_frame .big_product_content span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -807,7 +807,7 @@
 
 .spec_product_frame .big_product_content p {
   margin: 7px 0;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 26px;
@@ -817,7 +817,7 @@
 }
 
 .spec_product_frame .big_product_content a {
-font-family: "Jost";
+font-family: var(--font);
 font-style: normal;
 font-weight: 500;
 font-size: 15px;
@@ -871,7 +871,7 @@ color: #041E42;
 }
 
 .spec_product_frame .small_product_content strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -881,7 +881,7 @@ color: #041E42;
 }
 
 .spec_product_frame .small_product_content span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -985,7 +985,7 @@ color: #041E42;
 }
 
 .event_frame .event_content_box .event_title {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -1010,7 +1010,7 @@ color: #041E42;
 }
 
 .event_frame .timer_box strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -1020,7 +1020,7 @@ color: #041E42;
 }
 
 .event_frame .timer_box span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -1041,7 +1041,7 @@ color: #041E42;
   background: #FFF;
   border: 1px solid #FFF;
   border-radius: 6px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
