feat: completed brand section view

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -11,6 +11,18 @@
 }
 
 :root {
+    --Color-Border: #EAEAEA;
+}
+
+:root {
+    --Bg-White: #FFF;
+}
+
+:root {
+    --Bg-1: #443297;
+}
+
+:root {
     --Bg-2: #F5C34B;
 }
 
