--- a/public/css/general.css
+++ b/public/css/general.css
@@ -11,6 +11,10 @@
 }
 
 :root {
+    --Text-Head: #051036;
+}
+
+:root {
     --Color-Border: #EAEAEA;
 }
 
@@ -24,6 +28,10 @@
 
 :root {
     --Bg-2: #F5C34B;
+}
+
+:root {
+    --Bg-3: #f3f5f6;
 }
 
 html, body {
@@ -586,3 +594,34 @@ p {
 
     color: #041E42;
 }
+
+/* PAGE ROUTER */
+.page_router {
+    margin: 20px 0px;
+    width: 1320px;
+}
+
+.page_router span {
+    font-family: var(--font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+
+    color: var(--Color-Text-Dark);
+}
+
+.page_router span.drop {
+    margin: 0px 10px;
+}
+
+.page_router span:active {
+    font-family: var(--font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+
+    color: var(--Color-Text-Light);
+}
+
